Add working weather component with icon, temp, and description

--- a/styles.scss
+++ b/styles.scss
@@ -1,1 +1,33 @@
-@import 'weather';
+#weather {
+    display: flex;
+    align-items: center;
+    color: #fff;
+    margin-right: 1rem;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    background-color: rgba(255, 255, 255, 0.1);
+    
+    #weather-icon {
+      margin-right: 0.5rem;
+      
+      .weather-icon-img {
+        width: 32px;
+        height: 32px;
+      }
+    }
+    
+    #weather-temp {
+      font-weight: bold;
+      margin-right: 0.5rem;
+    }
+    
+    #weather-description {
+      text-transform: capitalize;
+      font-size: 0.9rem;
+    }
+    
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.2);
+      transition: background-color 0.3s ease;
+    }
+  }
